if (IOCOD_PLATFORM_WINDOWS)
    if (IOCOD_DX_TARGET EQUAL 9)
        target_sources(iocod PRIVATE "application_dx9.cc")
        target_link_libraries(iocod PUBLIC d3d9)
    elseif (IOCOD_DX_TARGET EQUAL 10)
        target_sources(iocod PRIVATE "application_dx10.cc")
        target_link_libraries(iocod PUBLIC d3d10 dxgi)
    elseif (IOCOD_DX_TARGET EQUAL 11)
        target_sources(iocod PRIVATE "application_dx11.cc")
        target_link_libraries(iocod PUBLIC d3d11 dxgi)
    elseif(IOCOD_DX_TARGET EQUAL 12)
        target_sources(iocod PRIVATE "application_dx12.cc")
        target_link_libraries(iocod PUBLIC d3d12 dxgi)
    endif()
else()
    target_sources(iocod PRIVATE "application_linux.cc")
endif()

target_sources(iocod PRIVATE "main.cc")
target_sources(iocod PRIVATE "imgui_custom.cc")
